parallelised implementatio nworking

--- a/scripts/spinon_free_testing.ipynb
+++ b/scripts/spinon_free_testing.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "cf835146-8225-4eaf-8b3e-d349f9bfd763",
    "metadata": {
     "scrolled": true
@@ -88,16 +88,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Basis stats: 310 charge sectors, total dim 12846186\n"
+      "Loading basis...\n",
+      "\n",
+      "84 sectors | line 2969\n",
+      " Sorting...\n",
+      "Basis stats: 85 charge sectors, total dim 2970\n"
      ]
     }
    ],
    "source": [
-    "cellspec = [[3,0,0],[0,-3,0],[0,0,-2]]\n",
+    "# cellspec = [[3,0,0],[0,-3,0],[0,0,-2]]\n",
     "# cellspec = [[1,-1,-1],[1,-1,1],[1,1,-1]]\n",
     "import pyrochlore\n",
     "\n",
-    "lat = pyrochlore.import_json(\"../lattice_files/pyro_1_3_6x-12,-4,-8b0,-4,-4b4,0,4b1.json\")\n",
+    "# lat = pyrochlore.import_json(\"../lattice_files/pyro_1_3_6x-12,-4,-8b0,-4,-4b4,0,4b1.json\")\n",
+    "lat = pyrochlore.import_json(\"../lattice_files/pyro_2_2_2x0,4,4b4,0,4b4,4,0b1.json\")\n",
     "full_lat = RingflipHamiltonian(lat)\n",
     "full_lat.calc_basis(recalc=False)\n",
     "# name = \"%d%d%d_%d%d%d_%d%d%d\" % tuple(x for x in np.ravel(cellspec))\n",
@@ -106,7 +111,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
+   "id": "e70f5c93-fdb7-4726-aec0-87c243c74fa1",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "rops = full_lat.build_ringops((4,4,4,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "be3e7f34-9a19-4516-8620-970595ad2998",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1., -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,  1.,\n",
+       "       -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,\n",
+       "        1., -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,  1.,\n",
+       "       -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,\n",
+       "        1., -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,  1.,\n",
+       "       -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,\n",
+       "        1., -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,  1., -1.,  1.,\n",
+       "       -1.,  1., -1.,  1., -1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
+       "        0.,  0.,  0.,  0.,  0.,  0.])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.linalg.eigvals(rops[0][0].todense())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "9f4c7ac0-f336-4fe5-ad7f-35820fd746aa",
    "metadata": {},
    "outputs": [],
