added less random DB indexing

--- a/scripts/process_field.ipynb
+++ b/scripts/process_field.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "2141a418-1763-418a-b9eb-522a8c48227a",
    "metadata": {},
    "outputs": [],
@@ -16,8 +16,8 @@
     "from process_field_impl import *\n",
     "\n",
     "\n",
-    "# con = connect_npsql('../../ed_data/results_133.db')\n",
-    "con = connect_npsql('../../ed_data/results_old.db')\n",
+    "con = connect_npsql('../../ed_data/master_133.db')\n",
+    "# con = connect_npsql('../../ed_data/results_old.db')\n",
     "con.execute(\"PRAGMA journal_mode=WAL\")\n",
     "con.commit()\n",
     "\n"
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "40a48db2-3d99-448f-b6db-054a193c7a90",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "8b3d7920-2ecd-4a92-81ad-ec1ac7fc0420",
    "metadata": {},
    "outputs": [
@@ -57,21 +57,12 @@
      "output_type": "stream",
      "text": [
       "Loaded geometries: \n",
-      "[[0 8 8]\n",
-      " [8 0 8]\n",
-      " [8 8 0]]\n",
-      "[[0 8 8]\n",
-      " [-8 0 -8]\n",
-      " [-8 -8 0]]\n",
-      "[[0 0 16]\n",
-      " [8 8 16]\n",
-      " [-8 8 0]]\n",
-      "[[-4 0 24]\n",
-      " [-12 8 24]\n",
-      " [0 8 0]]\n",
-      "[[-12 0 24]\n",
-      " [-4 -12 0]\n",
-      " [-8 -12 24]]\n"
+      "[[0 12 12]\n",
+      " [4 0 12]\n",
+      " [4 12 0]]\n",
+      "[[0 12 12]\n",
+      " [-4 0 -12]\n",
+      " [-4 -12 0]]\n"
      ]
     }
    ],
@@ -85,36 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "da8cf12e-98cd-4ccf-a6bc-e95ced3db1cb",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "\n",
-    "xx, sec, sec_E, sec_names = find_groundstate_111(con, lats[2], 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "9ee47564-bf61-4029-b2da-adc1378cf668",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['(8, 8, 8, 8)']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sec_names"
+    "xx, sec, sec_E, sec_names = find_groundstate_111(con, lats[1], 1)"
    ]
   },
   {
