--- a/scripts/symmetries_toy_test.ipynb
+++ b/scripts/symmetries_toy_test.ipynb
@@ -108,11 +108,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0357e7c6-9d52-48f9-b773-b2b6caa2e880",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'generate_Abelian' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m G \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_Abelian\u001b[49m([\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m2\u001b[39m], [\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m])\n\u001b[1;32m      2\u001b[0m partition_basis(basis, G)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'generate_Abelian' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "G = generate_Abelian([0,1,3,2], [1,0,2,3])\n",
+    "partition_basis(basis, G)"
+   ]
   },
   {
    "cell_type": "code",
@@ -152,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# G = generate_Abelian([0,1,3,2], [1,0,2,3])\n",
+    "\n",
     "res = partition_basis(basis,  P)"
    ]
   },
