--- a/scripts/process_field.ipynb
+++ b/scripts/process_field.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "id": "2141a418-1763-418a-b9eb-522a8c48227a",
    "metadata": {},
    "outputs": [],
@@ -16,8 +16,9 @@
     "from process_field_impl import *\n",
     "\n",
     "\n",
-    "con = connect_npsql('../../ed_data/136g1_complete.db')\n",
+    "# con = connect_npsql('../../ed_data/136g1_complete.db')\n",
     "# con = connect_npsql('../../ed_data/results_old.db')\n",
+    "con = connect_npsql('../../ed_data/test/results_1007.db')\n",
     "con.execute(\"PRAGMA journal_mode=WAL\")\n",
     "con.commit()\n",
     "\n"
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "id": "40a48db2-3d99-448f-b6db-054a193c7a90",
    "metadata": {},
    "outputs": [],
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "id": "8b3d7920-2ecd-4a92-81ad-ec1ac7fc0420",
    "metadata": {},
    "outputs": [
@@ -56,13 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded geometries: \n",
-      "[[-12 0 24]\n",
-      " [-4 -12 0]\n",
-      " [-8 -12 24]]\n",
-      "[[0 12 0]\n",
-      " [-20 60 -48]\n",
-      " [-4 0 0]]\n"
+      "Loaded geometries: \n"
      ]
     }
    ],
@@ -76,19 +71,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "id": "85fc2449-7b11-4aab-bc95-49b21d5532d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c = con.execute(\"SELECT sector FROM field_111 GROUP BY sector\")\n",
     "sectors = c.fetchall()\n",
-    "c.close()"
+    "c.close()\n",
+    "sectors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "4be4df09-f863-4be4-a267-1e6dc2874649",
    "metadata": {
     "scrolled": true
@@ -97,346 +104,33 @@
     {
      "data": {
       "text/plain": [
-       "[('(0, 0, 18, 18)',),\n",
-       " ('(0, 12, 10, 14)',),\n",
-       " ('(0, 12, 12, 12)',),\n",
-       " ('(0, 12, 14, 10)',),\n",
-       " ('(0, 12, 16, 8)',),\n",
-       " ('(0, 12, 18, 6)',),\n",
-       " ('(0, 12, 6, 18)',),\n",
-       " ('(0, 12, 8, 16)',),\n",
-       " ('(0, 15, 10, 11)',),\n",
-       " ('(0, 15, 12, 9)',),\n",
-       " ('(0, 15, 14, 7)',),\n",
-       " ('(0, 15, 16, 5)',),\n",
-       " ('(0, 15, 18, 3)',),\n",
-       " ('(0, 15, 4, 17)',),\n",
-       " ('(0, 15, 6, 15)',),\n",
-       " ('(0, 15, 8, 13)',),\n",
-       " ('(0, 18, 0, 18)',),\n",
-       " ('(0, 18, 10, 8)',),\n",
-       " ('(0, 18, 12, 6)',),\n",
-       " ('(0, 18, 14, 4)',),\n",
-       " ('(0, 18, 16, 2)',),\n",
-       " ('(0, 18, 18, 0)',),\n",
-       " ('(0, 18, 2, 16)',),\n",
-       " ('(0, 18, 4, 14)',),\n",
-       " ('(0, 18, 6, 12)',),\n",
-       " ('(0, 18, 8, 10)',),\n",
-       " ('(0, 3, 16, 17)',),\n",
-       " ('(0, 3, 18, 15)',),\n",
-       " ('(0, 6, 12, 18)',),\n",
-       " ('(0, 6, 14, 16)',),\n",
-       " ('(0, 6, 16, 14)',),\n",
-       " ('(0, 6, 18, 12)',),\n",
-       " ('(0, 9, 10, 17)',),\n",
-       " ('(0, 9, 12, 15)',),\n",
-       " ('(0, 9, 14, 13)',),\n",
-       " ('(0, 9, 16, 11)',),\n",
-       " ('(0, 9, 18, 9)',),\n",
-       " ('(12, 0, 10, 14)',),\n",
-       " ('(12, 0, 12, 12)',),\n",
-       " ('(12, 0, 14, 10)',),\n",
-       " ('(12, 0, 16, 8)',),\n",
-       " ('(12, 0, 18, 6)',),\n",
-       " ('(12, 0, 6, 18)',),\n",
-       " ('(12, 0, 8, 16)',),\n",
-       " ('(12, 12, 0, 12)',),\n",
-       " ('(12, 12, 10, 2)',),\n",
-       " ('(12, 12, 12, 0)',),\n",
-       " ('(12, 12, 2, 10)',),\n",
-       " ('(12, 12, 4, 8)',),\n",
-       " ('(12, 12, 6, 6)',),\n",
-       " ('(12, 12, 8, 4)',),\n",
-       " ('(12, 15, 0, 9)',),\n",
-       " ('(12, 15, 2, 7)',),\n",
-       " ('(12, 15, 4, 5)',),\n",
-       " ('(12, 15, 6, 3)',),\n",
-       " ('(12, 15, 8, 1)',),\n",
-       " ('(12, 18, 0, 6)',),\n",
-       " ('(12, 18, 2, 4)',),\n",
-       " ('(12, 18, 4, 2)',),\n",
-       " ('(12, 18, 6, 0)',),\n",
-       " ('(12, 3, 10, 11)',),\n",
-       " ('(12, 3, 12, 9)',),\n",
-       " ('(12, 3, 14, 7)',),\n",
-       " ('(12, 3, 16, 5)',),\n",
-       " ('(12, 3, 18, 3)',),\n",
-       " ('(12, 3, 4, 17)',),\n",
-       " ('(12, 3, 6, 15)',),\n",
-       " ('(12, 3, 8, 13)',),\n",
-       " ('(12, 6, 0, 18)',),\n",
-       " ('(12, 6, 10, 8)',),\n",
-       " ('(12, 6, 12, 6)',),\n",
-       " ('(12, 6, 14, 4)',),\n",
-       " ('(12, 6, 16, 2)',),\n",
-       " ('(12, 6, 18, 0)',),\n",
-       " ('(12, 6, 2, 16)',),\n",
-       " ('(12, 6, 4, 14)',),\n",
-       " ('(12, 6, 6, 12)',),\n",
-       " ('(12, 6, 8, 10)',),\n",
-       " ('(12, 9, 0, 15)',),\n",
-       " ('(12, 9, 10, 5)',),\n",
-       " ('(12, 9, 12, 3)',),\n",
-       " ('(12, 9, 14, 1)',),\n",
-       " ('(12, 9, 2, 13)',),\n",
-       " ('(12, 9, 4, 11)',),\n",
-       " ('(12, 9, 6, 9)',),\n",
-       " ('(12, 9, 8, 7)',),\n",
-       " ('(15, 0, 10, 11)',),\n",
-       " ('(15, 0, 12, 9)',),\n",
-       " ('(15, 0, 14, 7)',),\n",
-       " ('(15, 0, 16, 5)',),\n",
-       " ('(15, 0, 18, 3)',),\n",
-       " ('(15, 0, 4, 17)',),\n",
-       " ('(15, 0, 6, 15)',),\n",
-       " ('(15, 0, 8, 13)',),\n",
-       " ('(15, 12, 0, 9)',),\n",
-       " ('(15, 12, 2, 7)',),\n",
-       " ('(15, 12, 4, 5)',),\n",
-       " ('(15, 12, 6, 3)',),\n",
-       " ('(15, 12, 8, 1)',),\n",
-       " ('(15, 15, 0, 6)',),\n",
-       " ('(15, 15, 2, 4)',),\n",
-       " ('(15, 15, 4, 2)',),\n",
-       " ('(15, 15, 6, 0)',),\n",
-       " ('(15, 18, 0, 3)',),\n",
-       " ('(15, 18, 2, 1)',),\n",
-       " ('(15, 3, 0, 18)',),\n",
-       " ('(15, 3, 10, 8)',),\n",
-       " ('(15, 3, 12, 6)',),\n",
-       " ('(15, 3, 14, 4)',),\n",
-       " ('(15, 3, 16, 2)',),\n",
-       " ('(15, 3, 18, 0)',),\n",
-       " ('(15, 3, 2, 16)',),\n",
-       " ('(15, 3, 4, 14)',),\n",
-       " ('(15, 3, 6, 12)',),\n",
-       " ('(15, 3, 8, 10)',),\n",
-       " ('(15, 6, 0, 15)',),\n",
-       " ('(15, 6, 10, 5)',),\n",
-       " ('(15, 6, 12, 3)',),\n",
-       " ('(15, 6, 14, 1)',),\n",
-       " ('(15, 6, 2, 13)',),\n",
-       " ('(15, 6, 4, 11)',),\n",
-       " ('(15, 6, 6, 9)',),\n",
-       " ('(15, 6, 8, 7)',),\n",
-       " ('(15, 9, 0, 12)',),\n",
-       " ('(15, 9, 10, 2)',),\n",
-       " ('(15, 9, 12, 0)',),\n",
-       " ('(15, 9, 2, 10)',),\n",
-       " ('(15, 9, 4, 8)',),\n",
-       " ('(15, 9, 6, 6)',),\n",
-       " ('(15, 9, 8, 4)',),\n",
-       " ('(18, 0, 0, 18)',),\n",
-       " ('(18, 0, 10, 8)',),\n",
-       " ('(18, 0, 12, 6)',),\n",
-       " ('(18, 0, 14, 4)',),\n",
-       " ('(18, 0, 16, 2)',),\n",
-       " ('(18, 0, 18, 0)',),\n",
-       " ('(18, 0, 2, 16)',),\n",
-       " ('(18, 0, 4, 14)',),\n",
-       " ('(18, 0, 6, 12)',),\n",
-       " ('(18, 0, 8, 10)',),\n",
-       " ('(18, 12, 0, 6)',),\n",
-       " ('(18, 12, 2, 4)',),\n",
-       " ('(18, 12, 4, 2)',),\n",
-       " ('(18, 12, 6, 0)',),\n",
-       " ('(18, 15, 0, 3)',),\n",
-       " ('(18, 15, 2, 1)',),\n",
-       " ('(18, 18, 0, 0)',),\n",
-       " ('(18, 3, 0, 15)',),\n",
-       " ('(18, 3, 10, 5)',),\n",
-       " ('(18, 3, 12, 3)',),\n",
-       " ('(18, 3, 14, 1)',),\n",
-       " ('(18, 3, 2, 13)',),\n",
-       " ('(18, 3, 4, 11)',),\n",
-       " ('(18, 3, 6, 9)',),\n",
-       " ('(18, 3, 8, 7)',),\n",
-       " ('(18, 6, 0, 12)',),\n",
-       " ('(18, 6, 10, 2)',),\n",
-       " ('(18, 6, 12, 0)',),\n",
-       " ('(18, 6, 2, 10)',),\n",
-       " ('(18, 6, 4, 8)',),\n",
-       " ('(18, 6, 6, 6)',),\n",
-       " ('(18, 6, 8, 4)',),\n",
-       " ('(18, 9, 0, 9)',),\n",
-       " ('(18, 9, 2, 7)',),\n",
-       " ('(18, 9, 4, 5)',),\n",
-       " ('(18, 9, 6, 3)',),\n",
-       " ('(18, 9, 8, 1)',),\n",
-       " ('(3, 0, 16, 17)',),\n",
-       " ('(3, 0, 18, 15)',),\n",
-       " ('(3, 12, 10, 11)',),\n",
-       " ('(3, 12, 12, 9)',),\n",
-       " ('(3, 12, 14, 7)',),\n",
-       " ('(3, 12, 16, 5)',),\n",
-       " ('(3, 12, 18, 3)',),\n",
-       " ('(3, 12, 4, 17)',),\n",
-       " ('(3, 12, 6, 15)',),\n",
-       " ('(3, 12, 8, 13)',),\n",
-       " ('(3, 15, 0, 18)',),\n",
-       " ('(3, 15, 10, 8)',),\n",
-       " ('(3, 15, 12, 6)',),\n",
-       " ('(3, 15, 14, 4)',),\n",
-       " ('(3, 15, 16, 2)',),\n",
-       " ('(3, 15, 18, 0)',),\n",
-       " ('(3, 15, 2, 16)',),\n",
-       " ('(3, 15, 4, 14)',),\n",
-       " ('(3, 15, 6, 12)',),\n",
-       " ('(3, 15, 8, 10)',),\n",
-       " ('(3, 18, 0, 15)',),\n",
-       " ('(3, 18, 10, 5)',),\n",
-       " ('(3, 18, 12, 3)',),\n",
-       " ('(3, 18, 14, 1)',),\n",
-       " ('(3, 18, 2, 13)',),\n",
-       " ('(3, 18, 4, 11)',),\n",
-       " ('(3, 18, 6, 9)',),\n",
-       " ('(3, 18, 8, 7)',),\n",
-       " ('(3, 3, 12, 18)',),\n",
-       " ('(3, 3, 14, 16)',),\n",
-       " ('(3, 3, 16, 14)',),\n",
-       " ('(3, 3, 18, 12)',),\n",
-       " ('(3, 6, 10, 17)',),\n",
-       " ('(3, 6, 12, 15)',),\n",
-       " ('(3, 6, 14, 13)',),\n",
-       " ('(3, 6, 16, 11)',),\n",
-       " ('(3, 6, 18, 9)',),\n",
-       " ('(3, 9, 10, 14)',),\n",
-       " ('(3, 9, 12, 12)',),\n",
-       " ('(3, 9, 14, 10)',),\n",
-       " ('(3, 9, 16, 8)',),\n",
-       " ('(3, 9, 18, 6)',),\n",
-       " ('(3, 9, 6, 18)',),\n",
-       " ('(3, 9, 8, 16)',),\n",
-       " ('(6, 0, 12, 18)',),\n",
-       " ('(6, 0, 14, 16)',),\n",
-       " ('(6, 0, 16, 14)',),\n",
-       " ('(6, 0, 18, 12)',),\n",
-       " ('(6, 12, 0, 18)',),\n",
-       " ('(6, 12, 10, 8)',),\n",
-       " ('(6, 12, 12, 6)',),\n",
-       " ('(6, 12, 14, 4)',),\n",
-       " ('(6, 12, 16, 2)',),\n",
-       " ('(6, 12, 18, 0)',),\n",
-       " ('(6, 12, 2, 16)',),\n",
-       " ('(6, 12, 4, 14)',),\n",
-       " ('(6, 12, 6, 12)',),\n",
-       " ('(6, 12, 8, 10)',),\n",
-       " ('(6, 15, 0, 15)',),\n",
-       " ('(6, 15, 10, 5)',),\n",
-       " ('(6, 15, 12, 3)',),\n",
-       " ('(6, 15, 14, 1)',),\n",
-       " ('(6, 15, 2, 13)',),\n",
-       " ('(6, 15, 4, 11)',),\n",
-       " ('(6, 15, 6, 9)',),\n",
-       " ('(6, 15, 8, 7)',),\n",
-       " ('(6, 18, 0, 12)',),\n",
-       " ('(6, 18, 10, 2)',),\n",
-       " ('(6, 18, 12, 0)',),\n",
-       " ('(6, 18, 2, 10)',),\n",
-       " ('(6, 18, 4, 8)',),\n",
-       " ('(6, 18, 6, 6)',),\n",
-       " ('(6, 18, 8, 4)',),\n",
-       " ('(6, 3, 10, 17)',),\n",
-       " ('(6, 3, 12, 15)',),\n",
-       " ('(6, 3, 14, 13)',),\n",
-       " ('(6, 3, 16, 11)',),\n",
-       " ('(6, 3, 18, 9)',),\n",
-       " ('(6, 6, 10, 14)',),\n",
-       " ('(6, 6, 12, 12)',),\n",
-       " ('(6, 6, 14, 10)',),\n",
-       " ('(6, 6, 16, 8)',),\n",
-       " ('(6, 6, 18, 6)',),\n",
-       " ('(6, 6, 6, 18)',),\n",
-       " ('(6, 6, 8, 16)',),\n",
-       " ('(6, 9, 10, 11)',),\n",
-       " ('(6, 9, 12, 9)',),\n",
-       " ('(6, 9, 14, 7)',),\n",
-       " ('(6, 9, 16, 5)',),\n",
-       " ('(6, 9, 18, 3)',),\n",
-       " ('(6, 9, 4, 17)',),\n",
-       " ('(6, 9, 6, 15)',),\n",
-       " ('(6, 9, 8, 13)',),\n",
-       " ('(9, 0, 10, 17)',),\n",
-       " ('(9, 0, 12, 15)',),\n",
-       " ('(9, 0, 14, 13)',),\n",
-       " ('(9, 0, 16, 11)',),\n",
-       " ('(9, 0, 18, 9)',),\n",
-       " ('(9, 12, 0, 15)',),\n",
-       " ('(9, 12, 10, 5)',),\n",
-       " ('(9, 12, 12, 3)',),\n",
-       " ('(9, 12, 14, 1)',),\n",
-       " ('(9, 12, 2, 13)',),\n",
-       " ('(9, 12, 4, 11)',),\n",
-       " ('(9, 12, 6, 9)',),\n",
-       " ('(9, 12, 8, 7)',),\n",
-       " ('(9, 15, 0, 12)',),\n",
-       " ('(9, 15, 10, 2)',),\n",
-       " ('(9, 15, 12, 0)',),\n",
-       " ('(9, 15, 2, 10)',),\n",
-       " ('(9, 15, 4, 8)',),\n",
-       " ('(9, 15, 6, 6)',),\n",
-       " ('(9, 15, 8, 4)',),\n",
-       " ('(9, 18, 0, 9)',),\n",
-       " ('(9, 18, 2, 7)',),\n",
-       " ('(9, 18, 4, 5)',),\n",
-       " ('(9, 18, 6, 3)',),\n",
-       " ('(9, 18, 8, 1)',),\n",
-       " ('(9, 3, 10, 14)',),\n",
-       " ('(9, 3, 12, 12)',),\n",
-       " ('(9, 3, 14, 10)',),\n",
-       " ('(9, 3, 16, 8)',),\n",
-       " ('(9, 3, 18, 6)',),\n",
-       " ('(9, 3, 6, 18)',),\n",
-       " ('(9, 3, 8, 16)',),\n",
-       " ('(9, 6, 10, 11)',),\n",
-       " ('(9, 6, 12, 9)',),\n",
-       " ('(9, 6, 14, 7)',),\n",
-       " ('(9, 6, 16, 5)',),\n",
-       " ('(9, 6, 18, 3)',),\n",
-       " ('(9, 6, 4, 17)',),\n",
-       " ('(9, 6, 6, 15)',),\n",
-       " ('(9, 6, 8, 13)',),\n",
-       " ('(9, 9, 0, 18)',),\n",
-       " ('(9, 9, 10, 8)',),\n",
-       " ('(9, 9, 12, 6)',),\n",
-       " ('(9, 9, 14, 4)',),\n",
-       " ('(9, 9, 16, 2)',),\n",
-       " ('(9, 9, 18, 0)',),\n",
-       " ('(9, 9, 2, 16)',),\n",
-       " ('(9, 9, 4, 14)',),\n",
-       " ('(9, 9, 6, 12)',),\n",
-       " ('(9, 9, 8, 10)',)]"
+       "[]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "sectors"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "id": "da8cf12e-98cd-4ccf-a6bc-e95ced3db1cb",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "Lengths don't match - 59 != 67",
+     "ename": "IndexError",
+     "evalue": "list index out of range",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m xx, sec, sec_E, sec_names \u001b[38;5;241m=\u001b[39m \u001b[43mfind_groundstate_111\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcon\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlats\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/mygh/QSI/subspace_ED/scripts/process_field_impl.py:77\u001b[0m, in \u001b[0;36mfind_groundstate_111\u001b[0;34m(con, lat, sign)\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfind_groundstate_111\u001b[39m(con, lat, sign\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m---> 77\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfind_groundstate_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcon\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlat\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msign\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     78\u001b[0m \u001b[43m                          \u001b[49m\u001b[43mx_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mg0_g123\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     79\u001b[0m \u001b[43m                          \u001b[49m\u001b[43mtable_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mfield_111\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     80\u001b[0m \u001b[43m                          \u001b[49m\u001b[43msign_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mg123_sign\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[1;32m     81\u001b[0m \u001b[43m                         \u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/mygh/QSI/subspace_ED/scripts/process_field_impl.py:59\u001b[0m, in \u001b[0;36mfind_groundstate_impl\u001b[0;34m(con, lat, sign, x_name, table_name, sign_name)\u001b[0m\n\u001b[1;32m     56\u001b[0m         e \u001b[38;5;241m=\u001b[39m convert_array(e)[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     57\u001b[0m         tmp\u001b[38;5;241m.\u001b[39mappend(e)\n\u001b[0;32m---> 59\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(tmp) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(x_list), \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLengths don\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt match - \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(tmp)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m != \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(x_list)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     60\u001b[0m     energy_list\u001b[38;5;241m.\u001b[39mappend(tmp)\n\u001b[1;32m     62\u001b[0m best_sectors \u001b[38;5;241m=\u001b[39m []\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Lengths don't match - 59 != 67"
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[53], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m xx, sec, sec_E, sec_names \u001b[38;5;241m=\u001b[39m find_groundstate_111(con, \u001b[43mlats\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
