--- a/scripts/symmetries_toy_test.ipynb
+++ b/scripts/symmetries_toy_test.ipynb
@@ -298,8 +298,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "bedf736d-aa37-4e04-a043-3531ba353b03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h = np.array([0,1e-19,1,2,3,3.00000000000001, 3.00000000000000002, 4])\n",
+    "\n",
+    "\n",
+    "mask = np.diff( np.hstack((h, np.inf)) ) > 1e-10\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bbcd78d3-4fee-4160-a208-21704aad7a95",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(h)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2d395380-3235-42ee-8d54-bc78bac1e664",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b0c9cf80-1dd7-4c5e-af99-55edfcba67e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True,  True,  True, False, False,  True,  True])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "041ecef5-c61c-40c6-ac10-3abff320c701",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.e-19, 1.e+00, 2.e+00, 3.e+00, 4.e+00])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h[mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "955a998b-048a-4e54-bf77-275e96431efd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.e+00, 1.e-19, 1.e+00, 2.e+00, 3.e+00, 3.e+00, 3.e+00, 4.e+00,\n",
+       "       1.e+00])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.append(h, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4be7d4dd-acf3-462a-8c3f-07629ddd9621",
    "metadata": {},
    "outputs": [],
    "source": []
