tweaks to make martial lattices work

--- a/scripts/symmetries_toy_test.ipynb
+++ b/scripts/symmetries_toy_test.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 202,
    "id": "0a2a0e31-08ec-4161-bbb3-7571f8f80a79",
    "metadata": {},
    "outputs": [],
@@ -32,59 +32,110 @@
     "import bit_tools\n",
     "import bisect\n",
     "from sympy.combinatorics import PermutationGroup, Permutation\n",
-    "\n",
-    "basis = sorted([0b0011, 0b0101, 0b0110, 0b1010, 0b1100, 0b1001])\n"
+    "from sortedcontainers import SortedDict\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e4d49506-7c4b-4c42-8ba2-7f8bca90a0c4",
+   "execution_count": 164,
+   "id": "19672913-96ca-4f7e-9515-06bc133e55c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import itertools\n",
     "\n",
-    "def perm_order(P):\n",
-    "    # expects P to be a permutation written as a list\n",
-    "    order = 1\n",
+    "def find_word(G, perm):\n",
+    "    \"\"\"Finds the word representation of perm in terms of G.generators\"\"\"\n",
+    "    from collections import deque\n",
+    "    \n",
+    "    # Identity permutation\n",
+    "    identity = Permutation(list(range(len(perm.array_form))))\n",
+    "    \n",
+    "    # BFS queue: stores (current permutation, word leading to it)\n",
+    "    queue = deque([(identity, [])])\n",
+    "    visited = {identity: []}\n",
+    "    \n",
+    "    generators = G.generators + [g**-1 for g in G.generators]  # Include inverses\n",
+    "    gen_indices = [i+1 for i in range(len(G.generators))] + [-i-1 for i in range(len(G.generators))]\n",
     "\n",
-    "    P = np.array(P)\n",
-    "    y = P.copy()\n",
-    "    while any(i != x for i, x in enumerate(y) ):\n",
-    "        order += 1\n",
-    "        y = P[y]\n",
-    "    return order\n"
+    "    while queue:\n",
+    "        current_perm, word = queue.popleft()\n",
+    "\n",
+    "        # If we found the target permutation, return the word\n",
+    "        if current_perm == perm:\n",
+    "            return word\n",
+    "        \n",
+    "        for gen, index in zip(generators, gen_indices):\n",
+    "            new_perm = current_perm * gen\n",
+    "            \n",
+    "            if new_perm not in visited:\n",
+    "                visited[new_perm] = word + [index]  # Extend the word\n",
+    "                queue.append((new_perm, word + [index]))\n",
+    "    \n",
+    "    return None  # Should never happen in a well-defined group"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 146,
+   "id": "7f5b7baa-199b-4198-9bbf-98b40b70aa60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multirange(*args):\n",
+    "    return itertools.product(*[range(n) for n in args])\n",
+    "\n",
+    "def group_power(generators, N):\n",
+    "    h = generators[0]**0\n",
+    "    for g, n in zip(generators, N):\n",
+    "        h *= g**n\n",
+    "    return h\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
    "id": "2ba4f645-e08f-4048-a88e-9738c9c5c273",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
+    "def partition_basis_Abelian(blist, group:PermutationGroup, verify_basis=True):\n",
+    "    \"\"\"\n",
+    "    @param blist -> a list of basis vectors, represented in Sz basis as bitstrings\n",
+    "    @param group -> the symmetry group\n",
+    "    @param verify_basis -> enables checks that the basis respects the symmetries\n",
     "\n",
-    "def partition_basis(blist, group:PermutationGroup, verify_basis=True):\n",
-    "    orbits = []    \n",
-    "    # the basis elements already in an orbit\n",
-    "    covered_elems = []\n",
+    "    @return a SortedDict, keys are basis states, values are of form (seed_state_idx, (n1,n2,n3))\n",
+    "        to indicate that the idx'th\n",
+    "    \"\"\"\n",
+    "    orbit_index = SortedDict()\n",
+    "    \n",
+    "    covered_elems = [] # the basis elements already in an orbit\n",
+    "    assert group.is_abelian\n",
     "\n",
+    "    gen_orders = [g.order() for g in group.generators]\n",
+    "\n",
+    "    seed_state_list = []\n",
+    "\n",
+    "    num_orbits = 0\n",
     "    idx = 0\n",
     "    while idx < len(blist):\n",
     "        seed_state = blist[idx]\n",
+    "        \n",
     "\n",
     "        J = bisect.bisect_left(covered_elems, seed_state)\n",
     "        if J < len(covered_elems) and covered_elems[J] == seed_state:\n",
     "            # we have already hit this\n",
     "            idx+= 1\n",
     "            continue\n",
-    "            \n",
     "\n",
-    "        curr_orbit = []\n",
-    "        for g in group.elements:\n",
-    "                \n",
+    "        seed_state_list.append(seed_state)\n",
+    "\n",
+    "        # curr_orbit = []\n",
+    "        \n",
+    "        for N in multirange(*gen_orders):\n",
+    "            g = group_power(group.generators, N)\n",
     "            state = bit_tools.bitperm(g.array_form, seed_state)\n",
     "            idx_to_insert = bisect.bisect_left(covered_elems, state)\n",
     "\n",
@@ -95,184 +146,99 @@
     "            \n",
     "            if idx_to_insert >= len(covered_elems) or covered_elems[idx_to_insert] != state:\n",
     "                covered_elems.insert(idx_to_insert, state)\n",
-    "            \n",
-    "                curr_orbit.append(state)\n",
+    "                orbit_index[state] = (num_orbits, N)\n",
+    "                # curr_orbit.append((N, state))\n",
+    "                # sector_dims[N] += 1\n",
     "            \n",
     "        \n",
     "\n",
-    "        orbits.append(curr_orbit)\n",
+    "        # orbits.append(curr_orbit)\n",
+    "        num_orbits += 1\n",
     "        idx+= 1\n",
     "\n",
-    "    return orbits"
+    "    return orbit_index, seed_state_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 216,
    "id": "0357e7c6-9d52-48f9-b773-b2b6caa2e880",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'generate_Abelian' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m G \u001b[38;5;241m=\u001b[39m \u001b[43mgenerate_Abelian\u001b[49m([\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m2\u001b[39m], [\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m])\n\u001b[1;32m      2\u001b[0m partition_basis(basis, G)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'generate_Abelian' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 63.9 ms, sys: 9.15 ms, total: 73.1 ms\n",
+      "Wall time: 99.6 ms\n",
+      "CPU times: user 18 μs, sys: 7 μs, total: 25 μs\n",
+      "Wall time: 25.7 μs\n"
      ]
     }
    ],
    "source": [
-    "G = generate_Abelian([0,1,3,2], [1,0,2,3])\n",
-    "partition_basis(basis, G)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 285,
-   "id": "84eaa4e5-7e2c-4978-8e0d-36657eb132ed",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (1797845655.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[285], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
-   "source": [
-    "class RepDecomposition:\n",
-    "    def __init__(self, basis_list):\n",
-    "        self.basis_list.append"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 310,
-   "id": "335d4590-a2f2-466a-980a-49a42c530808",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "P = PermutationGroup([Permutation(x) for x in [[1,2,0,3], [1,0,2,3]]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 313,
-   "id": "2570ca91-1777-4b9b-a365-ad702d343225",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "Lx = 4\n",
+    "Ly = 5\n",
     "\n",
-    "res = partition_basis(basis,  P)"
+    "\n",
+    "def make_basis(N):\n",
+    "    basis = []\n",
+    "    for J in range(1<<N):\n",
+    "        if J.bit_count() == N//2:\n",
+    "            basis.append(J)\n",
+    "    basis.sort()\n",
+    "    return basis\n",
+    "\n",
+    "%time basis = make_basis(Lx*Ly)\n",
+    "\n",
+    "def make_transl_ops(Lx, Ly):\n",
+    "    Tx = np.zeros(Lx*Ly)\n",
+    "    Ty = np.zeros(Lx*Ly)\n",
+    "    \n",
+    "    for ix in range(Lx):\n",
+    "        for iy in range(Ly):\n",
+    "            Tx[Ly*ix+iy] = Ly*((ix+1)%Lx)+iy\n",
+    "            Ty[Ly*ix+iy] = Ly*ix + ((iy+1)%Ly)\n",
+    "    return Tx, Ty\n",
+    "\n",
+    "%time Tx, Ty = make_transl_ops(Lx, Ly)\n",
+    "\n",
+    "G = PermutationGroup(Permutation(Tx), Permutation(Ty))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
-   "id": "d1f76129-4223-46b2-a2ba-a502bc36d222",
+   "execution_count": 212,
+   "id": "b88fb4fd-b32c-441b-9ed2-d6a3e944ca3a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\n",
-      "000011 \n",
-      "000110 \n",
-      "000101 \n",
-      "]\n",
-      "[\n",
-      "001001 \n",
-      "001010 \n",
-      "001100 \n",
-      "]\n"
+      "CPU times: user 5.63 s, sys: 25.6 ms, total: 5.65 s\n",
+      "Wall time: 5.65 s\n"
      ]
     }
    ],
    "source": [
-    "def fmt_bin(x):\n",
-    "    return f\"{x:06b}\"\n",
-    "\n",
-    "for r in res:\n",
-    "    print(\"[\")\n",
-    "    for k in r:\n",
-    "        print(f\"{k:06b} \")\n",
-    "    print(\"]\")"
+    "%%time\n",
+    "basis_partition, seeds = partition_basis_Abelian(basis, G)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
-   "id": "a22cd0a9-81ee-420c-ae52-c0c57a2c851a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{Permutation(3)(0, 1, 2), Permutation(3)(0, 2, 1)}"
-      ]
-     },
-     "execution_count": 323,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "P.conjugacy_classes()[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 319,
-   "id": "3289c3fe-926c-44b5-8a69-761de8748b28",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matrix([[0, 0, 0], [0, 0, 0], [0, 0, 0]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sympy as syp\n",
-    "\n",
-    "def decompose_orbit(orbit, characters, cc_list):\n",
-    "    # :param characters, cc_list -> matching characters and conjugacy classes\n",
-    "    # step 1: compute perm group rep\n",
-    "    M = syp.zeros(len(orbit),len(orbit))\n",
-    "    print(M)\n",
-    "    assert len(characters) == len(G.conjugacy_classes)\n",
-    "    cc_repr_matrices = \n",
-    "    for cc in G.conjugacy_classes():\n",
-    "        tmp = syp.zeros(len(orbit),len(orbit))\n",
-    "        for state in orbit:\n",
-    "            bit_tools.bitperm(\n",
-    "        \n",
-    "\n",
-    "decompose_orbit(res[0], P)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 308,
-   "id": "6015ecd1-a897-4cfa-86e6-4f5a36c5c30d",
+   "execution_count": 200,
+   "id": "26a2e6e9-5905-4d4b-b7a7-c9e5b8bfff71",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# class CharacterTable:\n",
-    "#     def __init__(self, G:PermutationGroup):\n",
-    "#         self.G = G\n",
-    "#         self.\n",
-    "\n",
-    "\n",
-    "# def decompose_orbits(orbit_set, ct:CharacterTable):"
+    "# check that this works as expected\n",
+    "for state in basis_partition:\n",
+    "    J, N = basis_partition[state]\n",
+    "    s2 = bit_tools.bitperm(group_power(G.generators, N).array_form, seeds[J])\n",
+    "    assert state == s2, f\"{state:09b} {s2:09b} seed {seeds[J]:09b} ^ {N}\""
    ]
   },
   {
@@ -293,126 +259,7 @@
     }
    ],
    "source": [
-    "res[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "bedf736d-aa37-4e04-a043-3531ba353b03",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h = np.array([0,1e-19,1,2,3,3.00000000000001, 3.00000000000000002, 4])\n",
-    "\n",
-    "\n",
-    "mask = np.diff( np.hstack((h, np.inf)) ) > 1e-10\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "bbcd78d3-4fee-4160-a208-21704aad7a95",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(h)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "2d395380-3235-42ee-8d54-bc78bac1e664",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(mask)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "b0c9cf80-1dd7-4c5e-af99-55edfcba67e1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False,  True,  True,  True, False, False,  True,  True])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "041ecef5-c61c-40c6-ac10-3abff320c701",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1.e-19, 1.e+00, 2.e+00, 3.e+00, 4.e+00])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "h[mask]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "955a998b-048a-4e54-bf77-275e96431efd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.e+00, 1.e-19, 1.e+00, 2.e+00, 3.e+00, 3.e+00, 3.e+00, 4.e+00,\n",
-       "       1.e+00])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.append(h, 1)"
+    "\n"
    ]
   },
   {
