--- a/scripts/spinon_free_testing.ipynb
+++ b/scripts/spinon_free_testing.ipynb
@@ -79,69 +79,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
+   "id": "e4813e31-ab0f-4402-87ad-e168b8776185",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "cf835146-8225-4eaf-8b3e-d349f9bfd763",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating basis...\n",
+      "Building state tree...\n",
+      "Set up execution with 1 threads\n",
+      "Thread 0 state 0x0\n",
+      "Importing lattice_files/pyro_1_2_2x0,4,4b4,0,4b4,4,0b1.0.basis.csv...\n",
+      "Loading basis...\n",
+      "\n",
+      "1 sectors | line 113\n",
+      " Sorting...\n",
+      "Basis stats: 1 sectors, total dim 114\n"
+     ]
+    }
+   ],
    "source": [
     "# cellspec = [[3,0,0],[0,-3,0],[0,0,-2]]\n",
     "# cellspec = [[1,-1,-1],[1,-1,1],[1,1,-1]]\n",
-    "lat = Lattice(primitive_suggestion=pyrochlore.primitive, bravais_vectors=[[2,0,0],[0,3,0],[0,0,3]])\n",
-    "# lat = pyrochlore.import_json(\"../lattice_files/pyro_1_3_6x-12,-4,-8b0,-4,-4b4,0,4b1.json\")\n",
+    "lat = Lattice(primitive_suggestion=pyrochlore.primitive, bravais_vectors=[[1,0,0],[0,2,0],[0,0,2]])\n",
+    "\n",
+    "\n",
+    "# lat = Lattice(primitive_suggestion=pyrochlore.primitive, bravais_vectors=[[2,0,0],[0,2,0],[0,0,2]])\n",
+    "\n",
+    "# lat = Lattice(primitive_suggestion=pyrochlore.primitive, bravais_vectors=[[2,0,0],[0,3,0],[0,0,3]])\n",
+    "# lat = pyrochlore.import_json(\"../lattice_files/pyro_2_3_3x0,4,4b4,0,4b4,4,0b1.json\")\n",
     "# lat = pyrochlore.import_json(\"../lattice_files/pyro_2,0,0_0,2,0_0,0,2.json\")\n",
     "# lat = pyrochlore.import_json(\"../lattice_files/pyro_1_2_2x0,4,4b4,0,4b4,4,0b1.json\")\n",
     "full_lat = RingflipHamiltonian(lat)\n",
-    "pyrochlore.export_json(lat, \"../\"+full_lat.latfile_loc)\n",
+    "full_lat.calc_basis()\n",
+    "# pyrochlore.export_json(lat, \"../\"+full_lat.latfile_loc)\n",
     "# full_lat.calc_basis(recalc=False)\n",
     "# full_lat.load_basis(\"../lattice_files/pyro_2,0,0_0,2,0_0,0,2.0.basis.csv\")\n",
     "# full_lat.load_basis(\"../basis_partitions/pyro_2_2_2x0,4,4b4,0,4b4,4,0b1/s4.4.4.4_\")\n",
     "# full_lat.load_basis(\"../basis_partitions/pyro_1_3_6x-12,-4,-8b0,-4,-4b4,0,4b1/s9.9.8.10_\")\n",
     "# name = \"%d%d%d_%d%d%d_%d%d%d\" % tuple(x for x in np.ravel(cellspec))\n",
     "# pyrochlore.export_json(full_lat.lattice, \"../lattice_files/pyro_\"+name+\".json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "46f6c867-6ebe-45ff-94ab-ecbeb5d3dbe0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'3_-3_-2x0,4,4b4,0,4b4,4,0b1'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lat.shape_hash()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "c90fafd8-bb2a-4a4a-83c8-50ba58adc1f9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "576"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lat.num_atoms"
    ]
   },
   {
